Fixed #199
Changed login window to no longer get "squished" on a smaller window by changing the margin-right in .login-form-wrapper to be the relative 45wh instead of the absolute 1111px.

--- a/MajorHelp/static/css/login/login.css
+++ b/MajorHelp/static/css/login/login.css
@@ -50,7 +50,7 @@ body::before {
 
 /* Styles for the login form wrapper to centralize it */
 .login-form-wrapper {
-    margin-right: 1111px;
+    margin-right: 45vw;
     background-color: rgba(255, 255, 255); /* Light white background for the form area */
     padding: 20px 40px;
     border-radius: 10px;
